# project-mcp

./: .devenv.flake.nix  .gitignore  README.md  artifact_loader.py  devenv.nix  devenv.yaml  fastmcp.json  path_util.py  pyproject.toml  server.py
.github/workflows/: ci.yml
artifacts/data-pipeline/: README.md
artifacts/data-pipeline/configs/: dag.yaml
artifacts/default/snippets/: hello.py
artifacts/default/templates/var-test/: greet.txt
artifacts/fastapi/templates/fastapi-app/: main.py
artifacts/templates/: react-component.tsx
configs/: Dockerfile  pyproject.toml
snippets/: hello.py
templates/fastapi-app/: README.md
tests/: conftest.py  test_artifact_loader.py  test_path_util.py  test_tools.py
