[project]
name = "project-mcp"
version = "0.1.0"
description = "FastMCP server for project development: templates, configs, and lifecycle tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
